--- a/Frontend/src/Pages/Login/Login.module.scss
+++ b/Frontend/src/Pages/Login/Login.module.scss
@@ -1,5 +1,47 @@
+@import "../../Abstracts/Variables/Variables.scss";
+
 .background {
-  background-color: crimson;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: $white;
   width: 100vw;
   height: 100vh;
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+  }
+  .img {
+    img:first-child {
+      z-index: 5;
+    }
+  }
+  .login {
+    form:first-child {
+      z-index: 5;
+    }
+  }
+}
+
+.wave {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  z-index: 5;
+
+  width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .background{
+    .img{
+      display: none;
+    }
+  }
 }
