:lipstick: Update the signup UI

--- a/Frontend/src/Components/Input/Input.module.scss
+++ b/Frontend/src/Components/Input/Input.module.scss
@@ -27,6 +27,7 @@
 
     border: none;
     border-bottom: 1px solid $primary-text;
+    background-color: transparent;
 
     color: $primary-text;
 
