:lock: Add private routes

--- a/Frontend/src/Components/Input/Input.module.scss
+++ b/Frontend/src/Components/Input/Input.module.scss
@@ -33,6 +33,10 @@
 
     width: 100%;
   }
+  p {
+    font-weight: 600;
+    font-size: 0.8rem;
+  }
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
