--- a/Frontend/src/Components/Navbar/Navbar.module.scss
+++ b/Frontend/src/Components/Navbar/Navbar.module.scss
@@ -7,6 +7,7 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-right: 1px solid black;
 
     ul{
         display: flex;
@@ -27,7 +28,10 @@ nav{
 
             color: black;
             text-decoration: none;
-            font-family: "Open Sans", sans-serif;            
+            font-family: "Open Sans", sans-serif; 
+            
+            cursor: pointer;
+            user-select: none;
         }
         .navbarLink:hover {
             color: black;
