--- a/Frontend/src/Components/SignUpForm/SignUpForm.module.scss
+++ b/Frontend/src/Components/SignUpForm/SignUpForm.module.scss
@@ -15,14 +15,23 @@
   color: $primary-text;
   background-color: $white;
 
-  .inputs {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-
+  .text {
     width: 100%;
+    
+    .inputs {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+  
+      width: 100%;
+    }
+  
+    .message{
+      font-size: 16px;
+    }
   }
 }
+
 @media (max-width: 768px) {
   .background {
     border: none;
