--- a/Frontend/src/Components/Navbar/Navbar.module.scss
+++ b/Frontend/src/Components/Navbar/Navbar.module.scss
@@ -14,6 +14,9 @@ nav{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        li{
+            width:100%
+        }
         .navbarLink{
             height: 100%;
             width: 100%;
@@ -29,6 +32,7 @@ nav{
             color: black;
             text-decoration: none;
             font-family: "Open Sans", sans-serif; 
+            font-size: 20px;
             
             cursor: pointer;
             user-select: none;
