--- a/Frontend/src/Pages/Home/Home.module.scss
+++ b/Frontend/src/Pages/Home/Home.module.scss
@@ -2,44 +2,40 @@
 
 .home {
     display: flex;
-    main {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    .content {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: left;
+        flex-direction: column;
+        gap:24px;
         
-        width: 100%;
+        .global {
+            user-select: none;
+            cursor: pointer;
 
-        .content {
             display: flex;
-            justify-content: center;
-            align-items: left;
-            flex-direction: column;
+            gap: 8px;
+
+            margin-right:auto;
+
+            font-family: "Montserrat", sans-serif;
+            font-weight: 500;
+            font-size: 28px;
+            color: $primary-text;
+        }
+
+        .insuranceCompany {
+            background-color: white;
+                
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
             gap:24px;
-            
-            .global {
-                user-select: none;
-                cursor: pointer;
-
-                display: flex;
-                gap: 8px;
-
-                margin-right:auto;
-
-                font-family: "Montserrat", sans-serif;
-                font-weight: 500;
-                font-size: 28px;
-                color: $primary-text;
-            }
-    
-            .insuranceCompany {
-                background-color: white;
-                    
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                flex-wrap: wrap;
-                gap:24px;
-            }
         }
     }
 }
